--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.121",
     "@mui/material": "^5.11.10",
     "cryptr": "^6.1.0",
+    "ethers": "^5.7.2",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
